# pydiconde

./: .gitignore  README.md  pyproject.toml
example/: minimal.dcm  minimal.py  source.json
src/jsontodiconde/: cli.py  main.py
src/pydiconde/: __init__.py  modules.py
src/pydiconde/modules/: component.py  componentseries.py  componentstudy.py  dataelementlabeldictionary.py  ndeapproval.py  ndeequipment.py  ndegeometry.py  ndeindication.py
src/pythonCDD.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
